--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,3 +6,7 @@
 h1{
     font-family: Arial, Helvetica, sans-serif;
 }
+.containerfooterindex{
+    background-color: rgba(0, 0, 0, 0.856);
+    color: white;
+}
